# tin-summer

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  PERFORMANCE.md  README.md  README.md.new  RELEASES.md  RELEASE_CHECKLIST.md  TODO.md  appveyor.yml  build.rs  file
.cargo/: config
bash/: build_all  cross-buildtest  manpage  windows_test
benches/: bench.rs
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
ignore/: Cargo.toml
ignore/src/: walk.rs
ion/: all  bench  build_all  lines  lolwut  mkRelease  parallel  release  test  testbench  testrun  upload  windows_test
man/: MANPAGE.md  tin-summer.1
src/: artifact_type.rs  cli_helpers.rs  error.rs  gitignore.rs  lib.rs  macros.rs  main.rs  options-de.yml  options-en.yml  options-fr.yml  test.rs  types.rs  utils.rs  walk_parallel.rs
src/cli/: options-de.yml  options-en.yml  options-fr.yml
src/testdata/: .gitignore  junk.rlib  symlink  བོད་.rlib  བོད་སྐད་
src/testdata/subdir/: file  junkfile3  junkfile6
src/testdata/subdir2/: junkfile4  junkfile9
src/testdata/subdir2/nested/: junk.rlib  junkfile1  junkfile2  junkfile5  junkfile7  junkfile8
src/testresults/: all
src/walk_parallel/: mod.rs  single_threaded.rs
