[package]
authors = ["Vanessa McHale <vanessa.mchale@reconfigure.io>"]
build = "build.rs"
description = "Command-line tool to find build artifacts and thing occupying space on your computer. Shatters records not glass."
documentation = "https://github.com/vmchale/tin-summer#README"
homepage = "https://github.com/vmchale/tin-summer"
license-file = "LICENSE"
name = "tin-summer"
readme = "README.md"
repository = "https://nest.pijul.com/vamchale/tin-summer"
version = "1.15.3"
[metadata.deb]
extended-description = "Command-line tool written as a partial replacement for du. Automitically sniffs our build artifacts and can optionally clean them as well."
license-file = ["LICENSE"]
[[bin]]
name = "sn"
path = "src/main.rs"
[build-dependencies.clap]
features = ["yaml"]
version = "2.26.0"

[dependencies]
colored = "1.5.2"
crossbeam = "0.3.0"
glob = "0.2.11"
lazy_static = "0.2.8"
nom = "3.2.0"
num_cpus = "1.6.2"
pad = "0.1.4"
walkdir = "1.0.7"

[dependencies.regex]
features = ["simd-accel"]
version = "0.2"

[dependencies.clap]
features = ["yaml"]
version = "2.26.0"

[features]
bash = []
default = ["english"]
deutsch = []
english = []
fish = []
francais = []
verbose = []

[lib]
name = "liboskar"
path = "src/lib.rs"
[profile.release]
lto = true
