[package]
authors = ["Vanessa McHale <vanessa.mchale@reconfigure.io>"]
build = "build.rs"
description = "Command-line tool to find build artifacts and thing occupying space on your computer. Shatters records not glass."
documentation = "https://github.com/vmchale/tin-summer#README"
homepage = "https://github.com/vmchale/tin-summer"
license-file = "LICENSE"
name = "tin-summer"
readme = "README.md"
repository = "https://github.com/vmchale/tin-summer"
version = "1.20.1"
[metadata.deb]
extended-description = "Command-line tool written as a partial replacement for du. Automitically sniffs our build artifacts and can optionally clean them as well."
license-file = ["LICENSE"]
[[bin]]
name = "sn"
path = "src/main.rs"

[build-dependencies]
cli-setup = "0.1"
[build-dependencies.clap]
features = ["yaml"]
version = "2.29.0"

[dependencies]
colored = "1.6.0"
crossbeam = "0.3.0"
glob = "0.2.11"
lazy_static = "1.0.0"
nom = "3.2.1"
num_cpus = "1.8.0"
pad = "0.1.4"
walkdir = "2.0.1"
regex = "0.2.5"

[dependencies.clap]
features = ["yaml"]
version = "2.29.0"

[features]
bash = []
default = ["english"]
deutsch = []
english = []
fish = []
francais = []
simd = [ "regex/simd-accel" ]
pattern = [ "regex/pattern" ]

[lib]
name = "liboskar"
path = "src/lib.rs"
[profile.release]
#panic="abort"
lto = true
