[package]
authors = ["Vanessa McHale <vanessa.mchale@iohk.io>"]
build = "build.rs"
description = "Command-line tool to find build artifacts and thing occupying space on your computer. Shatters records not glass."
documentation = "https://github.com/vmchale/tin-summer#README"
homepage = "https://github.com/vmchale/tin-summer"
license-file = "LICENSE"
name = "tin-summer"
readme = "README.md"
repository = "https://github.com/vmchale/tin-summer"
version = "1.21.8"

[metadata.deb]
extended-description = "Command-line tool written as a partial replacement for du. Automitically sniffs our build artifacts and can optionally clean them as well."
license-file = ["LICENSE"]

[[bin]]
name = "sn"
path = "src/main.rs"

[build-dependencies]
cli-setup = "0.2"
[build-dependencies.clap]
features = ["yaml"]
version = "2.29.2"

[dependencies]
colored = "1.6.0"
crossbeam = "0.6.0"
glob = "0.2.11"
lazy_static = "1.0.0"
nom = "3.2"
num_cpus = "1.8.0"
pad = "0.1.4"
walkdir = "2.1.3"
regex = "1.0"

[dependencies.clap]
features = ["yaml"]
version = "2.29.2"

[features]
bash = []
default = ["english"]
deutsch = []
english = []
fish = []
francais = []

[lib]
name = "liboskar"
path = "src/lib.rs"

[profile.release]
lto = true
